--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -4,6 +4,9 @@ body, html {
 }
 
 .container {
+  display: grid;
+  gap: 15px;
+  grid-template: 1fr 1fr 5fr 1fr / 1fr 3fr;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -11,6 +14,7 @@ body, html {
 }
 
 .container div {
+  
   padding: 15px;
   font-size: 32px;
   font-family: Helvetica;
@@ -20,18 +24,26 @@ body, html {
 }
 
 .header {
+  display: grid;
+  grid-area: 1 / 1 / 1 / 3;
   background-color: #FFDE22;
 }
 
 .sidebar {
+  display: grid;
+  grid-area: 2 / 1 / 4 / 2;
   background-color: #FF7755;
 }
 
 .nav {
+  display: grid;
+  grid-area: 2 / 2 / 2 / 3;
   background-color: #00DDFF;
 }
 
 .article {
+  display: grid;
+  grid-area: 3 / 2 / 4 / 3;
   background-color: #bccbde;
 }
 
@@ -43,5 +55,7 @@ body, html {
 }
 
 .footer {
+  display: grid;
+  grid-area: 4 / 1 / 5 / 3;
   background-color: #393f4d;
 }
