--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,6 +4,9 @@
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
   text-align: center;
 }
 
@@ -16,15 +19,32 @@
 }
 
 .header {
+  display: grid;
+  grid-column: 1 / 3;
+  grid-template-columns: 1fr 2fr;
   background-color: #393f4d;
+}
+
+.logo{
+  justify-self: start;
+}
+
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+ 
 }
 
 .menu ul,
 .menu li {
+  align-self                                                                                                                                                                                                                         : center;
   font-size: 16px;
 }
 
 .sidebar {
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 30px;
   background-color: #FF7755;
 }
 
@@ -34,18 +54,32 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
 }
 
+.photo p{
+  align-self: center;
+}
 
 .sidebar .side-content {
   background-color: white;
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-items: center;
 }
 
+
+
 .nav {
+  grid-column: 2 / 3;
   background-color: #FF7755;
+}
+
+.nav ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .nav ul li {
@@ -55,6 +89,9 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +105,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -82,6 +120,7 @@
 }
 
 .footer {
+  grid-column: 1 / 3;
   background-color: #393f4d;
 }
 
